[package]
name = "dilbert-feed"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "echo"
path = "echo/lambda.rs"

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master" }
log = "0.4"
serde_json = "1.0"
simple_logger = "1.6"
tokio = { version = "0.2", features = ["full"] }
